--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="menu">
       <h1>
-        <a href="./Kellie_English_CV.pdf">
+        <a href="./kellieenglish_cv.pdf">
           <b>CV</b>
         </a>
       </h1>
